@@ -190,32 +190,10 @@ AC_SUBST(GCC_LIBS)
 #	*** HEADERS ***
 #
 AC_LANG(C++)
-m4_warn([obsolete],
-[Update your code to rely only on HAVE_SYS_TIME_H,
-then remove this warning and the obsolete code below it.
-All current systems provide time.h; it need not be checked for.
-Not all systems provide sys/time.h, but those that do, all allow
-you to include it and time.h simultaneously.])dnl
-AC_CHECK_HEADERS_ONCE([sys/time.h])
-# Obsolete code to be removed.
-if test $ac_cv_header_sys_time_h = yes; then
-  AC_DEFINE([TIME_WITH_SYS_TIME],[1],[Define to 1 if you can safely include both <sys/time.h>
-	     and <time.h>.  This macro is obsolete.])
-fi
-# End of obsolete code.
- 
 AC_CHECK_HEADERS(sys/time.h)
-AC_CHECK_HEADERS(math.h)
 AC_CHECK_HEADERS(ieeefp.h)
 AC_CHECK_HEADERS(sys/termios.h)
-AC_CHECK_HEADERS(stddef.h)
-AC_CHECK_HEADERS(limits.h)
-AC_CHECK_HEADERS(stdlib.h)
-AC_CHECK_HEADERS(stdio.h)
-AC_CHECK_HEADERS(ctype.h)
 AC_CHECK_HEADERS(unistd.h)
-AC_CHECK_HEADERS(ostream)
-AC_CHECK_HEADERS(ostream.h)
 #
 #	*** SIZES ***
 #
