@@ -25,9 +25,7 @@
 //
 #ifndef _mathStuff_hh_
 #define _mathStuff_hh_
-#if HAVE_MATH_H
-#include <math.h>
-#endif
+#include <cmath>
 #if HAVE_IEEEFP_H
 #include <ieeefp.h>
 #endif
