@@ -1,3 +1,8 @@
+2025-02-28  Rubén Rubio  <rubenrub@ucm.es>
+
+	* model-checker.maude: modules LTL+ and MODEL-CHECKER+
+	by José Meseguer
+
 2024-06-07  Steven M. Eker  <eker@eker10>
 
 	* maude.sty: updated to 3.5beta
